# python-oop-project-101

./: Makefile  README.md  pyproject.toml
tests/: test_basic.py  test_custom.py  test_dict.py  test_list.py  test_number.py
validator/: __init__.py  schemes.py  validator.py
validator/schemes/: number_scheme.py  string_scheme.py
