[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"
packages = [
  { include = "validator" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

